# grade-query

./: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  crud.py  crud_logs_snippet.py  database.py  docker-compose.ci.yml  docker-compose.debug.yml  docker-compose.yml  email_service.py  i18n.py  main.py  models.py  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.jules/: bolt.md
app/: crud.py  dependencies.py  main.py
app/core/: i18n.py
app/routers/: admin.py  admin_email_api.py  admin_email_auth.py  auth.py  general.py  student.py
app/services/: email.py  pdf.py
app/templates/: admin.html  admin_logs.html  admin_scores.html  login.html  privacy_policy.html  student_score_pdf.html
templates/: admin.html  admin_login_logs.html  admin_logs.html  admin_scores.html  base.html  login.html  student.html  student_logs.html  student_report_pdf.html  submission.html  terms_of_service.html
